feat: first experiment

--- a/dataset_preparation.ipynb
+++ b/dataset_preparation.ipynb
@@ -1042,6 +1042,92 @@
     "print(f\"Total de imágenes en 'filtered_valid': {total_valid}\")\n",
     "print(f\"Total general de imágenes en el dataset filtrado: {total_train + total_test + total_valid}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generando el archivo CSV con los metadatos del dataset filtrado...\n",
+      "\n",
+      "CSV de metadatos generado exitosamente en: filtered_dataset/filtered_dataset_metadata.csv\n",
+      "\n",
+      "Las primeras 5 filas del CSV (con rutas relativas):\n",
+      "   class_index                  filepaths       labels data_set\n",
+      "0           15  train/RED CRACKER/016.jpg  RED CRACKER    train\n",
+      "1           15  train/RED CRACKER/002.jpg  RED CRACKER    train\n",
+      "2           15  train/RED CRACKER/003.jpg  RED CRACKER    train\n",
+      "3           15  train/RED CRACKER/017.jpg  RED CRACKER    train\n",
+      "4           15  train/RED CRACKER/029.jpg  RED CRACKER    train\n",
+      "\n",
+      "Total de filas en el CSV: 4593\n",
+      "\n",
+      "Distribución de imágenes por conjunto en el CSV:\n",
+      "data_set\n",
+      "train    3693\n",
+      "test      750\n",
+      "valid     150\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nGenerando el archivo CSV con los metadatos del dataset filtrado...\")\n",
+    "\n",
+    "# Definir la ruta donde se guardará el CSV\n",
+    "csv_output_path = os.path.join(filtered_dataset_path, 'filtered_dataset_metadata.csv')\n",
+    "\n",
+    "# Crear un diccionario para mapear el nombre de la especie a un índice numérico\n",
+    "species_to_index = {species: i for i, species in enumerate(top_30_species)}\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "# Recorrer los conjuntos (train, test, valid)\n",
+    "for dataset_type in ['train', 'test', 'valid']:\n",
+    "    current_dataset_path = os.path.join(filtered_dataset_path, dataset_type)\n",
+    "\n",
+    "    # Recorrer cada especie dentro del conjunto actual\n",
+    "    for species_name in os.listdir(current_dataset_path):\n",
+    "        species_folder_path = os.path.join(current_dataset_path, species_name)\n",
+    "\n",
+    "        if os.path.isdir(species_folder_path) and species_name in species_to_index:\n",
+    "            class_index = species_to_index[species_name]\n",
+    "\n",
+    "            # Recorrer cada imagen en la carpeta de la especie\n",
+    "            for image_name in os.listdir(species_folder_path):\n",
+    "                image_path = os.path.join(species_folder_path, image_name)\n",
+    "\n",
+    "                if os.path.isfile(image_path):\n",
+    "                    # 'filtered_dataset_path' es la base de referencia para las rutas relativas.\n",
+    "                    relative_filepath = os.path.relpath(image_path, start=filtered_dataset_path)\n",
+    "\n",
+    "                    data.append({\n",
+    "                        'class_index': class_index,\n",
+    "                        'filepaths': relative_filepath,\n",
+    "                        'labels': species_name,\n",
+    "                        'data_set': dataset_type\n",
+    "                    })\n",
+    "\n",
+    "# Crear un DataFrame de pandas\n",
+    "df_metadata = pd.DataFrame(data)\n",
+    "\n",
+    "# Guardar el DataFrame en un archivo CSV\n",
+    "df_metadata.to_csv(csv_output_path, index=False)\n",
+    "\n",
+    "print(f\"\\nCSV de metadatos generado exitosamente en: {csv_output_path}\")\n",
+    "print(\"\\nLas primeras 5 filas del CSV (con rutas relativas):\")\n",
+    "print(df_metadata.head())\n",
+    "print(f\"\\nTotal de filas en el CSV: {len(df_metadata)}\")\n",
+    "\n",
+    "# Opcional: Verificar la distribución de los datasets en el CSV\n",
+    "print(\"\\nDistribución de imágenes por conjunto en el CSV:\")\n",
+    "print(df_metadata['data_set'].value_counts())"
+   ]
   }
  ],
  "metadata": {
