feat: integrate Hydra for configuration management in experiments

--- a/experimento2_denoising_autoencoder.ipynb
+++ b/experimento2_denoising_autoencoder.ipynb
@@ -12,21 +12,25 @@
         "3. **Clustering K-means**: Agrupación no supervisada de vectores latentes\n",
         "4. **Análisis de Clusters**: Comparación de imágenes por cluster\n",
         "\n",
-        "## Objetivos:\n",
+        "## Configuración con Hydra\n",
+        "- Gestión de configuraciones jerárquicas usando archivos YAML\n",
+        "- Configuraciones organizadas por modelo, datos, entrenamiento y experimento\n",
+        "- Hiperparámetros centralizados para ruido, t-SNE y clustering\n",
+        "- Control de reproducibilidad con semillas configurables\n",
+        "\n",
+        "## Objetivos\n",
         "- Entrenar un Denoising Autoencoder con ruido Salt and Pepper\n",
         "- Extraer vectores latentes del conjunto sin etiquetas\n",
         "- Visualizar vectores latentes con t-SNE\n",
         "- Aplicar clustering K-means a los vectores latentes\n",
         "- Analizar coherencia de clusters comparando imágenes\n",
         "\n",
-        "## Optimizaciones para GPU implementadas:\n",
-        "- ✅ Configuración automática de acelerador (`accelerator='auto'`)\n",
-        "- ✅ Detección automática de dispositivos (`devices='auto'`)\n",
-        "- ✅ Precisión mixta habilitada para GPU (`precision='16-mixed'`)\n",
-        "- ✅ Batch size adaptativo según memoria GPU disponible\n",
-        "- ✅ Optimizaciones cuDNN habilitadas\n",
-        "- ✅ Manejo correcto de dispositivos en evaluación\n",
-        "- ✅ Verificación completa de configuración GPU"
+        "## Optimizaciones GPU\n",
+        "- Configuración automática de acelerador y dispositivos\n",
+        "- Precisión mixta habilitada para GPU\n",
+        "- Batch size adaptativo según memoria disponible\n",
+        "- Optimizaciones cuDNN habilitadas\n",
+        "- Manejo correcto de dispositivos"
       ]
     },
     {
@@ -75,25 +79,55 @@
         "from dataset import ButterflyDataset, get_transforms\n",
         "from datamodule import ButterflyDataModule\n",
         "\n",
-        "# Configurar dispositivo y mostrar información detallada\n",
-        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "print(f'Using device: {device}')\n",
+        "# Importar configuración de Hydra\n",
+        "from hydra_config import (\n",
+        "    setup_experiment_2_config, \n",
+        "    print_config_summary,\n",
+        "    get_data_module_config,\n",
+        "    get_model_config,\n",
+        "    get_trainer_config\n",
+        ")\n",
         "\n",
-        "# Información adicional sobre GPU si está disponible\n",
+        "print(\"Cargando configuración con Hydra...\")\n",
+        "print(\"=\" * 50)\n",
+        "\n",
+        "# Cargar configuración del Experimento 2 usando Hydra\n",
+        "cfg, device_config, wandb_config = setup_experiment_2_config()\n",
+        "\n",
+        "# Mostrar resumen de configuración\n",
+        "print_config_summary(cfg, device_config)\n",
+        "\n",
+        "# Extraer configuraciones específicas\n",
+        "device = device_config['device']\n",
+        "BATCH_SIZE = device_config['batch_size']\n",
+        "IMAGE_SIZE = cfg.data.image_size\n",
+        "NUM_EPOCHS = cfg.training.max_epochs\n",
+        "LEARNING_RATE = cfg.training.learning_rate\n",
+        "SEED = cfg.seed\n",
+        "\n",
+        "# Parámetros específicos del experimento 2 (desde Hydra)\n",
+        "NOISE_PROBABILITY = cfg.model.noise.probability\n",
+        "NUM_CLUSTERS = cfg.model.clustering.num_clusters\n",
+        "TSNE_PERPLEXITY = cfg.model.tsne.perplexity\n",
+        "TSNE_N_ITER = cfg.model.tsne.n_iter\n",
+        "\n",
+        "print(f\"\\nConfiguración aplicada:\")\n",
+        "print(f\"Device: {device}\")\n",
+        "print(f\"Batch Size: {BATCH_SIZE}\")\n",
+        "print(f\"Image Size: {IMAGE_SIZE}\")\n",
+        "print(f\"Epochs: {NUM_EPOCHS}\")\n",
+        "print(f\"Learning Rate: {LEARNING_RATE}\")\n",
+        "print(f\"Seed: {SEED}\")\n",
+        "print(f\"Noise Probability: {NOISE_PROBABILITY}\")\n",
+        "print(f\"Num Clusters: {NUM_CLUSTERS}\")\n",
+        "print(f\"t-SNE Perplexity: {TSNE_PERPLEXITY}\")\n",
+        "print(f\"t-SNE Iterations: {TSNE_N_ITER}\")\n",
+        "\n",
+        "# Limpiar caché de GPU si está disponible\n",
         "if torch.cuda.is_available():\n",
-        "    print(f'GPU disponible: {torch.cuda.get_device_name(0)}')\n",
-        "    print(f'Memoria GPU total: {torch.cuda.get_device_properties(0).total_memory / 1024**3:.1f} GB')\n",
-        "    print(f'Versión CUDA: {torch.version.cuda}')\n",
-        "    print(f'cuDNN habilitado: {torch.backends.cudnn.enabled}')\n",
-        "    print(f'Precisión mixta disponible: {torch.cuda.is_available() and hasattr(torch.cuda, \"amp\")}')\n",
-        "    \n",
-        "    # Limpiar caché de GPU\n",
         "    torch.cuda.empty_cache()\n",
-        "else:\n",
-        "    print('GPU no disponible, usando CPU')\n",
-        "    print('Nota: El entrenamiento será significativamente más lento en CPU')\n",
         "\n",
-        "print(f'PyTorch version: {torch.__version__}')\n",
+        "print(f'\\nPyTorch version: {torch.__version__}')\n",
         "print(f'PyTorch Lightning version: {pl.__version__}')\n"
       ]
     },
@@ -199,62 +233,30 @@
         }
       ],
       "source": [
-        "# Configuración del proyecto\n",
-        "DATA_DIR = \"filtered_dataset/train\"\n",
-        "METADATA_CSV = \"filtered_dataset/filtered_dataset_metadata.csv\"\n",
+        "# Configuración desde Hydra\n",
+        "print(\"Aplicando configuración desde Hydra...\")\n",
         "\n",
-        "# Ajustar batch size según disponibilidad de GPU\n",
-        "if torch.cuda.is_available():\n",
-        "    # GPU disponible - usar batch size más grande si hay suficiente memoria\n",
-        "    gpu_memory_gb = torch.cuda.get_device_properties(0).total_memory / 1024**3\n",
-        "    if gpu_memory_gb >= 8:\n",
-        "        BATCH_SIZE = 64  # Para GPUs con 8GB+ de memoria\n",
-        "    elif gpu_memory_gb >= 4:\n",
-        "        BATCH_SIZE = 32  # Para GPUs con 4-8GB de memoria\n",
-        "    else:\n",
-        "        BATCH_SIZE = 16  # Para GPUs con menos de 4GB\n",
-        "    print(f'Batch size ajustado para GPU: {BATCH_SIZE}')\n",
-        "else:\n",
-        "    BATCH_SIZE = 16  # Batch size más pequeño para CPU\n",
-        "    print(f'Batch size ajustado para CPU: {BATCH_SIZE}')\n",
+        "# Extraer configuración de datos desde Hydra\n",
+        "data_module_config = get_data_module_config(cfg, device_config)\n",
+        "DATA_DIR = data_module_config['data_dir']\n",
+        "METADATA_CSV = data_module_config['metadata_csv']\n",
         "\n",
-        "IMAGE_SIZE = 224\n",
-        "NUM_EPOCHS = 50\n",
-        "LEARNING_RATE = 1e-3\n",
-        "SEED = 42\n",
+        "print(f\"Directorio de datos: {DATA_DIR}\")\n",
+        "print(f\"Archivo de metadata: {METADATA_CSV}\")\n",
         "\n",
-        "# Parámetros específicos del experimento 2\n",
-        "NOISE_PROBABILITY = 0.05  # Probabilidad de ruido Salt and Pepper\n",
-        "NUM_CLUSTERS = 30  # Número de clusters para K-means (igual al número de clases)\n",
-        "TSNE_PERPLEXITY = 30  # Parámetro de perplexity para t-SNE\n",
-        "TSNE_N_ITER = 1000  # Número de iteraciones para t-SNE\n",
+        "# Las optimizaciones de GPU se configuraron automáticamente\n",
+        "print(f\"Optimizaciones GPU: {'Habilitadas' if torch.cuda.is_available() else 'No disponibles'}\")\n",
         "\n",
-        "# Configurar semilla para reproducibilidad\n",
-        "pl.seed_everything(SEED)\n",
-        "\n",
-        "# Optimizaciones para GPU si está disponible\n",
-        "if torch.cuda.is_available():\n",
-        "    # Habilitar optimizaciones de cuDNN\n",
-        "    torch.backends.cudnn.benchmark = True\n",
-        "    torch.backends.cudnn.deterministic = False  # Para mejor rendimiento\n",
-        "    print(\"Optimizaciones de cuDNN habilitadas\")\n",
+        "# Parámetros específicos del Experimento 2\n",
+        "print(f\"\\nParámetros específicos del Experimento 2:\")\n",
+        "print(f\"   Probabilidad de ruido Salt & Pepper: {NOISE_PROBABILITY}\")\n",
+        "print(f\"   Número de clusters K-means: {NUM_CLUSTERS}\")\n",
+        "print(f\"   t-SNE Perplexity: {TSNE_PERPLEXITY}\")\n",
+        "print(f\"   t-SNE Iteraciones: {TSNE_N_ITER}\")\n",
         "\n",
         "# Configurar Wandb\n",
-        "wandb.init(\n",
-        "    project=\"butterfly-denoising-autoencoder\",\n",
-        "    name=\"experiment_2_denoising_tsne_clustering\",\n",
-        "    config={\n",
-        "        \"batch_size\": BATCH_SIZE,\n",
-        "        \"image_size\": IMAGE_SIZE,\n",
-        "        \"num_epochs\": NUM_EPOCHS,\n",
-        "        \"learning_rate\": LEARNING_RATE,\n",
-        "        \"seed\": SEED,\n",
-        "        \"noise_probability\": NOISE_PROBABILITY,\n",
-        "        \"num_clusters\": NUM_CLUSTERS,\n",
-        "        \"tsne_perplexity\": TSNE_PERPLEXITY,\n",
-        "        \"tsne_n_iter\": TSNE_N_ITER\n",
-        "    }\n",
-        ")\n"
+        "print(\"\\nInicializando Wandb...\")\n",
+        "wandb.init(**wandb_config)\n"
       ]
     },
     {
@@ -291,31 +293,26 @@
         }
       ],
       "source": [
+        "# Configurar DataModule usando configuración de Hydra\n",
         "# Reutilizar configuración del experimento 1 (70% no etiquetado, 30% etiquetado)\n",
-        "# Según el enunciado, reutilizamos uno de los cortes de datos del Experimento 1\n",
+        "print(\"Configurando DataModule con Hydra...\")\n",
+        "print(\"Reutilizando split 70-30 del Experimento 1\")\n",
         "\n",
-        "data_module_70_30 = ButterflyDataModule(\n",
-        "    data_dir=DATA_DIR,\n",
-        "    metadata_csv=METADATA_CSV,\n",
-        "    batch_size=BATCH_SIZE,\n",
-        "    num_workers=4,\n",
-        "    image_size=IMAGE_SIZE,\n",
-        "    labeled_ratio=0.3,  # 30% etiquetado, 70% no etiquetado (igual que experimento 1)\n",
-        "    seed=SEED\n",
-        ")\n",
+        "data_module_70_30 = ButterflyDataModule(**data_module_config)\n",
         "\n",
         "# Configurar datasets\n",
         "data_module_70_30.setup()\n",
-        "print(\"Información del dataset 70-30 (reutilizado del Experimento 1):\")\n",
+        "print(\"\\nInformación del dataset 70-30:\")\n",
         "info = data_module_70_30.get_dataset_info()\n",
         "for key, value in info.items():\n",
-        "    print(f\"{key}: {value}\")\n",
+        "    print(f\"  {key}: {value}\")\n",
         "\n",
         "print(f\"\\nDataset configurado para Experimento 2:\")\n",
-        "print(f\"- Datos no etiquetados para entrenamiento: {info['unlabeled_size']}\")\n",
-        "print(f\"- Datos de validación: {info['val_size']}\")\n",
-        "print(f\"- Datos de test: {info['test_size']}\")\n",
-        "print(f\"- Número de clases: {info['num_classes']}\")\n"
+        "print(f\"   - Datos no etiquetados para entrenamiento: {info['unlabeled_size']}\")\n",
+        "print(f\"   - Datos de validación: {info['val_size']}\")\n",
+        "print(f\"   - Datos de test: {info['test_size']}\")\n",
+        "print(f\"   - Número de clases: {info['num_classes']}\")\n",
+        "print(f\"   - Split configurado: {cfg.data.splits.labeled_ratio*100:.0f}% etiquetado, {(1-cfg.data.splits.labeled_ratio)*100:.0f}% no etiquetado\")\n"
       ]
     },
     {
