--- a/experimento_1_autoencoder_modular.ipynb
+++ b/experimento_1_autoencoder_modular.ipynb
@@ -1,25 +1,25 @@
 {
   "cells": [
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "# Experimento 1: Transfer Learning con Autoencoders U-Net\n",
         "\n",
         "Este notebook implementa el Experimento 1 del proyecto, usando módulos de Python separados para la carga de datos.\n",
         "\n",
-        "## Optimizaciones para GPU implementadas:\n",
-        "- ✅ Configuración automática de acelerador (`accelerator='auto'`)\n",
-        "- ✅ Detección automática de dispositivos (`devices='auto'`)\n",
-        "- ✅ Precisión mixta habilitada para GPU (`precision='16-mixed'`)\n",
-        "- ✅ Batch size adaptativo según memoria GPU disponible\n",
-        "- ✅ Optimizaciones cuDNN habilitadas\n",
-        "- ✅ Manejo correcto de dispositivos en evaluación y cuantización\n",
-        "- ✅ Verificación completa de configuración GPU\n"
+        "## Configuración con Hydra\n",
+        "- Gestión de configuraciones jerárquicas usando archivos YAML\n",
+        "- Configuraciones organizadas por modelo, datos, entrenamiento y experimento\n",
+        "- Hiperparámetros centralizados para fácil modificación\n",
+        "- Control de reproducibilidad con semillas configurables\n",
+        "\n",
+        "## Optimizaciones GPU\n",
+        "- Configuración automática de acelerador y dispositivos\n",
+        "- Precisión mixta habilitada para GPU\n",
+        "- Batch size adaptativo según memoria disponible\n",
+        "- Optimizaciones cuDNN habilitadas\n",
+        "- Manejo correcto de dispositivos\n"
       ]
     },
     {
@@ -62,25 +62,45 @@
         "from dataset import ButterflyDataset, get_transforms\n",
         "from datamodule import ButterflyDataModule\n",
         "\n",
-        "# Configurar dispositivo y mostrar información detallada\n",
-        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-        "print(f'Using device: {device}')\n",
+        "# Importar configuración de Hydra\n",
+        "from hydra_config import (\n",
+        "    setup_experiment_1_config, \n",
+        "    print_config_summary,\n",
+        "    get_data_module_config,\n",
+        "    get_model_config,\n",
+        "    get_trainer_config\n",
+        ")\n",
         "\n",
-        "# Información adicional sobre GPU si está disponible\n",
+        "print(\"Cargando configuración con Hydra...\")\n",
+        "print(\"=\" * 50)\n",
+        "\n",
+        "# Cargar configuración del Experimento 1 usando Hydra\n",
+        "cfg, device_config, wandb_config = setup_experiment_1_config(data_split=\"70_30\")\n",
+        "\n",
+        "# Mostrar resumen de configuración\n",
+        "print_config_summary(cfg, device_config)\n",
+        "\n",
+        "# Extraer configuraciones específicas\n",
+        "device = device_config['device']\n",
+        "BATCH_SIZE = device_config['batch_size']\n",
+        "IMAGE_SIZE = cfg.data.image_size\n",
+        "NUM_EPOCHS = cfg.training.max_epochs\n",
+        "LEARNING_RATE = cfg.training.learning_rate\n",
+        "SEED = cfg.seed\n",
+        "\n",
+        "print(f\"\\nConfiguración aplicada:\")\n",
+        "print(f\"Device: {device}\")\n",
+        "print(f\"Batch Size: {BATCH_SIZE}\")\n",
+        "print(f\"Image Size: {IMAGE_SIZE}\")\n",
+        "print(f\"Epochs: {NUM_EPOCHS}\")\n",
+        "print(f\"Learning Rate: {LEARNING_RATE}\")\n",
+        "print(f\"Seed: {SEED}\")\n",
+        "\n",
+        "# Limpiar caché de GPU si está disponible\n",
         "if torch.cuda.is_available():\n",
-        "    print(f'GPU disponible: {torch.cuda.get_device_name(0)}')\n",
-        "    print(f'Memoria GPU total: {torch.cuda.get_device_properties(0).total_memory / 1024**3:.1f} GB')\n",
-        "    print(f'Versión CUDA: {torch.version.cuda}')\n",
-        "    print(f'cuDNN habilitado: {torch.backends.cudnn.enabled}')\n",
-        "    print(f'Precisión mixta disponible: {torch.cuda.is_available() and hasattr(torch.cuda, \"amp\")}')\n",
-        "    \n",
-        "    # Limpiar caché de GPU\n",
         "    torch.cuda.empty_cache()\n",
-        "else:\n",
-        "    print('GPU no disponible, usando CPU')\n",
-        "    print('Nota: El entrenamiento será significativamente más lento en CPU')\n",
         "\n",
-        "print(f'PyTorch version: {torch.__version__}')\n",
+        "print(f'\\nPyTorch version: {torch.__version__}')\n",
         "print(f'PyTorch Lightning version: {pl.__version__}')\n"
       ]
     },
@@ -186,52 +206,23 @@
         }
       ],
       "source": [
-        "# Configuración del proyecto\n",
-        "DATA_DIR = \"filtered_dataset/train\"\n",
-        "METADATA_CSV = \"filtered_dataset/filtered_dataset_metadata.csv\"\n",
+        "# Configuración desde Hydra\n",
+        "print(\"Aplicando configuración desde Hydra...\")\n",
         "\n",
-        "# Ajustar batch size según disponibilidad de GPU\n",
-        "if torch.cuda.is_available():\n",
-        "    # GPU disponible - usar batch size más grande si hay suficiente memoria\n",
-        "    gpu_memory_gb = torch.cuda.get_device_properties(0).total_memory / 1024**3\n",
-        "    if gpu_memory_gb >= 8:\n",
-        "        BATCH_SIZE = 64  # Para GPUs con 8GB+ de memoria\n",
-        "    elif gpu_memory_gb >= 4:\n",
-        "        BATCH_SIZE = 32  # Para GPUs con 4-8GB de memoria\n",
-        "    else:\n",
-        "        BATCH_SIZE = 16  # Para GPUs con menos de 4GB\n",
-        "    print(f'Batch size ajustado para GPU: {BATCH_SIZE}')\n",
-        "else:\n",
-        "    BATCH_SIZE = 16  # Batch size más pequeño para CPU\n",
-        "    print(f'Batch size ajustado para CPU: {BATCH_SIZE}')\n",
+        "# Extraer configuración de datos desde Hydra\n",
+        "data_module_config = get_data_module_config(cfg, device_config)\n",
+        "DATA_DIR = data_module_config['data_dir']\n",
+        "METADATA_CSV = data_module_config['metadata_csv']\n",
         "\n",
-        "IMAGE_SIZE = 224\n",
-        "NUM_EPOCHS = 50\n",
-        "LEARNING_RATE = 1e-3\n",
-        "SEED = 42\n",
+        "print(f\"Directorio de datos: {DATA_DIR}\")\n",
+        "print(f\"Archivo de metadata: {METADATA_CSV}\")\n",
         "\n",
-        "# Configurar semilla para reproducibilidad\n",
-        "pl.seed_everything(SEED)\n",
-        "\n",
-        "# Optimizaciones para GPU si está disponible\n",
-        "if torch.cuda.is_available():\n",
-        "    # Habilitar optimizaciones de cuDNN\n",
-        "    torch.backends.cudnn.benchmark = True\n",
-        "    torch.backends.cudnn.deterministic = False  # Para mejor rendimiento\n",
-        "    print(\"Optimizaciones de cuDNN habilitadas\")\n",
+        "# Las optimizaciones de GPU se configuraron automáticamente\n",
+        "print(f\"Optimizaciones GPU: {'Habilitadas' if torch.cuda.is_available() else 'No disponibles'}\")\n",
         "\n",
         "# Configurar Wandb\n",
-        "wandb.init(\n",
-        "    project=\"butterfly-transfer-learning\",\n",
-        "    name=\"experiment_1_modular\",\n",
-        "    config={\n",
-        "        \"batch_size\": BATCH_SIZE,\n",
-        "        \"image_size\": IMAGE_SIZE,\n",
-        "        \"num_epochs\": NUM_EPOCHS,\n",
-        "        \"learning_rate\": LEARNING_RATE,\n",
-        "        \"seed\": SEED\n",
-        "    }\n",
-        ")\n"
+        "print(\"Inicializando Wandb...\")\n",
+        "wandb.init(**wandb_config)\n"
       ]
     },
     {
@@ -262,23 +253,23 @@
         }
       ],
       "source": [
-        "# Configurar DataModule con multiprocessing habilitado\n",
-        "data_module_70_30 = ButterflyDataModule(\n",
-        "    data_dir=DATA_DIR,\n",
-        "    metadata_csv=METADATA_CSV,\n",
-        "    batch_size=BATCH_SIZE,\n",
-        "    num_workers=4,  # Ahora podemos usar multiprocessing sin problemas\n",
-        "    image_size=IMAGE_SIZE,\n",
-        "    labeled_ratio=0.3,  # 30% etiquetado, 70% no etiquetado\n",
-        "    seed=SEED\n",
-        ")\n",
+        "# Configurar DataModule usando configuración de Hydra\n",
+        "print(\"Configurando DataModule con Hydra...\")\n",
+        "\n",
+        "data_module_70_30 = ButterflyDataModule(**data_module_config)\n",
         "\n",
         "# Configurar datasets\n",
         "data_module_70_30.setup()\n",
-        "print(\"Información del dataset 70-30:\")\n",
+        "print(\"\\nInformación del dataset 70-30:\")\n",
         "info = data_module_70_30.get_dataset_info()\n",
         "for key, value in info.items():\n",
-        "    print(f\"{key}: {value}\")\n"
+        "    print(f\"  {key}: {value}\")\n",
+        "    \n",
+        "print(f\"\\nDataModule configurado exitosamente\")\n",
+        "print(f\"   - Split: {cfg.data.splits.labeled_ratio*100:.0f}% etiquetado, {(1-cfg.data.splits.labeled_ratio)*100:.0f}% no etiquetado\")\n",
+        "print(f\"   - Batch size: {data_module_config['batch_size']}\")\n",
+        "print(f\"   - Workers: {data_module_config['num_workers']}\")\n",
+        "print(f\"   - Image size: {data_module_config['image_size']}\")\n"
       ]
     },
     {
@@ -353,12 +344,8 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Definición de Modelos\n",
         "\n",
@@ -521,12 +508,8 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "### 2. Clasificadores\n",
         "\n",
@@ -654,12 +637,8 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Funciones de Entrenamiento y Evaluación\n"
       ]
@@ -821,12 +800,8 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Experimento 70/30 (70% no etiquetado, 30% etiquetado)\n",
         "\n",
@@ -6287,12 +6262,8 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Experimento 90/10 (90% no etiquetado, 10% etiquetado)\n",
         "\n",
@@ -10007,12 +9978,8 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Cuantización de Modelos\n",
         "\n",
@@ -10217,12 +10184,8 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Visualizaciones y Análisis Comparativo\n"
       ]
@@ -10408,12 +10371,8 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "## Análisis Final y Conclusiones\n"
       ]
@@ -10639,12 +10598,8 @@
       ]
     },
     {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "# Experimento 2: Denoising Autoencoder y Visualización del Espacio Latente\n",
         "\n",
@@ -11029,19 +10984,8 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "raw",
-      "metadata": {
-        "vscode": {
-          "languageId": "raw"
-        }
-      },
       "source": [
         "## Instrucciones de Ejecución\n",
         "\n",
